# learn_opengl

./: CMakeLists.txt  README.md  cmd.bat  main.cpp
include/glad/: glad.h
lib/: glfw3.lib
shader/: FragmentShader.fs  VertexShader.vs  colorgrad.fs  colorgrad.vs  glossy.fs  glossy.vs  instance.vs  skybox.fs
src/: camera.cpp  camera.h  glad.c  load.h  model.cpp  model.h  shader.cpp  shader.h  utils.cpp  utils.h
